--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "basic-webpage-nextjs",
+  "name": "linked-role-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": "true",
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
+  "description": "A very simple example of a Linked Role bot for Discord.",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Justin Beckwith <justin.beckwith@discordapp.com>",
+  "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
 }
